# hacks

LinearSolve/: LICENSE  matrixalgebras.cabal
LinearSolve/src/: FiniteDimAlgebra.hs  LinearSolve.hs  Matrix.hs  NonNegMatricies.hs
StackCalc/: README.md  StackCalc.cabal
StackCalc/src/: Main.hs  StackCalc.hs
bratelli/: bratelli.cabal
bratelli/src/: Bratelli.hs  DoubleBox.hs  G2.hs  Partition.hs  SingleBox.hs  SymmetricFunctions.hs
finiteDimensionalAlgebras/: finiteDimensionalAlgebras.cabal
finiteDimensionalAlgebras/src/: FiniteDimensionalAlgebra.hs  LinearSolve.hs  Main.hs  Sym2CentralizerAlg.hs
hillary_poking/: hillary.cabal  stack.yaml
hillary_poking/src/: Main.hs
permutation/: permutation.cabal
permutation/src/: Main.hs  Permutations.hs
quantumgroup/: quantumgroup.cabal  stack.yaml
quantumgroup/src/: license_matrix
quantumgroup/src/Math/: Cyclotomic.hs  Matrix.hs  Polynomial.hs
quantumgroup/src/Math/Polynomial/: NumInstance.hs  Rational.hs  Type.hs  VectorSpace.hs
quantumgroup/src/QuantumGroups/: CarterFlathSaitoA1.hs
