name:                matrixalgebras
version:             0.1.0.0
synopsis:            A package for working with subalgebras of matrix algebras
description:         See readme
homepage:            http://github.com/danielbarter/matrixalgebras
license:             BSD3
license-file:        LICENSE
author:              Daniel Barter
maintainer:          danielbarter@gmail.com
copyright:           2016 Daniel Barter
category:            Math
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     LinearSolve,
                       Matrix,
                       FiniteDimAlgebra,
                       NonNegMatricies
  build-depends:       base >= 4.7 && < 5
                     , vector >= 0.10
                     , deepseq >= 1.3.0.0 && < 1.5
                     , primitive >= 0.5
                     , loop >= 0.2
                     , mtl >= 2.0 && < 3.0
                     , containers == 0.*
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/danielbarter/matrixalgebra
