name:                StackCalc
version:             0.1.0.0
synopsis:            A simple stack based calculator
description:         Please see README.md
homepage:            http://github.com/danielbarter/StackCalc
license:             BSD3
license-file:        LICENSE
author:              Daniel Barter
maintainer:          danielbarter@gmail.com
copyright:           2016 Daniel Barter
category:            Math
build-type:          Simple
cabal-version:       >=1.10

executable StackCalc
  hs-source-dirs:      src
  other-modules:       StackCalc
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       pretty == 1.*,
                       mtl == 2.*
