name:                bratelli
version:             0.1.0.0
synopsis:            computing bratelli diagrams
description:         computing bratelli diagrams
homepage:            http://github.com/danielbarter/bratelli
license:             BSD3
license-file:        LICENSE
author:              Daniel Barter
maintainer:          danielbarter@gmail.com
copyright:           2016 Daniel Barter
category:            Math
build-type:          Simple
cabal-version:       >=1.10

executable bratelli
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Bratelli
                       Partition
                       SingleBox
                       DoubleBox
                       G2
                       SymmetricFunctions
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       pretty == 1.*,
                       containers == 0.*
