name:                finiteDimensionalAlgebras
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/finiteDimensionalAlgebras#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable finiteDimensionalAlgebras
  hs-source-dirs:      src
  other-modules:       LinearSolve,
                       Permutations,
                       FiniteDimensionalAlgebra,
                       Sym2CentralizerAlg
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       matrix == 0.*,
                       mtl == 2.*,
                       vector == 0.*,
                       containers == 0.*,
                       pretty == 1.*,
                       transformers == 0.*
