name:                permutation
version:             0.1.0.0
synopsis:            Permutations
description:         Please see README.md
homepage:            http://github.com/danielbarter/permutations
license:             BSD3
license-file:        LICENSE
author:              Daniel Barter
maintainer:          danielbarter@gmail.com
copyright:           2016 Daniel Barter
category:            Math
build-type:          Simple
cabal-version:       >=1.10

executable permutation
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Permutations
  build-depends:       base >= 4.7 && < 5,
                       containers == 0.*,
                       pretty == 1.*,
                       matrix == 0.*,
                       mtl == 2.*,
                       transformers == 0.*
