name:                quantumgroup
version:             0.1.0.0
synopsis:            package for doing computations with quantum groups
description:         Please see README.md
homepage:            http://github.com/danielbarter/quantumgroup
license:             BSD3
license-file:        LICENSE
author:              Daniel Barter
maintainer:          danielbarter@gmail.com
copyright:           2015 Daniel Barter
category:            Math
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Math.Matrix
                       Math.Polynomial
                       Math.Polynomial.NumInstance
                       Math.Polynomial.Type
                       Math.Polynomial.VectorSpace
                       Math.Polynomial.Rational
                       QuantumGroups.CarterFlathSaitoA1
                       Math.Cyclotomic
  other-modules:       Data.List.ZipSum
                       Data.VectorSpace.WrappedNum
  build-depends:       base >= 3.5 && < 5,
                       containers >= 0.4 && < 0.6,
                       arithmoi >= 0.4 && < 0.5,
                       vector >= 0.10,
                       vector-space,
                       vector-th-unbox >= 0.2.1,
                       deepseq >= 1.3.0.0 && < 1.5,
                       primitive >= 0.5,
                       loop >= 0.2,
                       pretty >= 1.1.2
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/danielbarter/quantumgroup
